Closed Bug 27491 Opened 25 years ago Closed 25 years ago

never save signon for this site not working

Categories

(SeaMonkey :: Passwords & Permissions, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: morse, Assigned: morse)

Details

In a side-comment of bug report 26561, sairuh reported the following problem:

------------

1. go to site #1 and enter userid/passwd. say Never in the yes/no/never dialog.
that's the only dialog i encounter.

2. i want to check my sigon info and go to Tasks > My Wallet > Display Signons.
the dialog appears. the master passwd dialog appears, asking me to enter a
passwd if i want one (i don't enter any, so just click OK).i click on the
Signons Never Save tab, but nothing is listed (known problem...?). click Cancel
to get rid of dialog.

3. go to another site and enter userid/passwd. this time in the yes/no/never
dialog i click Yes.

4. again, i want to verify what in the Sigon editor: go to Tasks > My Wallet >
Dispaly Signons. (no other dialogs come up prompting me for passwd, since i
decided to not have one in step 2.) the Signons Saved tab does list that site
where i indicated Yes.
Further investigation reveals that the problem seems to occur when you press the 
never button before having entered your database key during the current session.  
I'm looking into it right now.
Status: NEW → ASSIGNED
Fixed.  Checked in new version of singsign.cpp
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verif on linux, mac and winNT w/opt comm bits 2000022808.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.