fix bug 27491, rejects not displayed in signon viewer.  Trivial coding change, not reviewed